[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TextMessageBox.gd" type="Script" id=1]
[ext_resource path="res://scenes/ModerationControl.tscn" type="PackedScene" id=2]

[node name="TextMessageBox" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
collapsed = true
dragger_visibility = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="MarginContainer" parent="."]
margin_right = 28.0
margin_bottom = 600.0
custom_constants/margin_right = 8
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="Username" type="Label" parent="NameContainer"]
margin_left = 4.0
margin_top = 289.0
margin_right = 20.0
margin_bottom = 311.0
rect_min_size = Vector2( 16, 22 )
align = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
collapsed = true
dragger_visibility = 1

[node name="TextContainer" type="MarginContainer" parent="HSplitContainer"]
margin_right = 936.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 3
custom_constants/margin_left = 0
custom_constants/margin_bottom = 3

[node name="MessageText" type="RichTextLabel" parent="HSplitContainer/TextContainer"]
margin_top = 3.0
margin_right = 932.0
margin_bottom = 597.0
size_flags_horizontal = 3
fit_content_height = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
margin_left = 948.0
margin_top = 576.0
margin_right = 996.0
margin_bottom = 600.0
size_flags_vertical = 10
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="ModerationControl" parent="HSplitContainer/MarginContainer" instance=ExtResource( 2 )]

[connection signal="message_accepted" from="HSplitContainer/MarginContainer/ModerationControl" to="." method="_on_ModerationControl_message_accepted" flags=6]
[connection signal="message_rejected" from="HSplitContainer/MarginContainer/ModerationControl" to="." method="_on_ModerationControl_message_rejected" flags=6]
